UPdate gitignore to remove vs files

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/vetter-system-odoo/v16
+/.vs/slnx.sqlite
+/.vs
